--- a/src/Shop/View/GUI/ProductsListGUI.fxml
+++ b/src/Shop/View/GUI/ProductsListGUI.fxml
@@ -4,7 +4,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<AnchorPane prefHeight="488.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Shop.View.Controllers.ProductsList">
+<AnchorPane prefHeight="488.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Shop.View.Controllers.ProductsListController">
    <children>
       <TableView fx:id="Table" layoutY="65.0" prefHeight="350.0" prefWidth="600.0">
         <columns>
