--- a/src/Shop/View/GUI/CartGUI.fxml
+++ b/src/Shop/View/GUI/CartGUI.fxml
@@ -15,8 +15,8 @@
       </TableView>
       <Label layoutX="437.0" layoutY="24.0" prefHeight="25.0" prefWidth="149.0" text="Количество" />
       <TextField fx:id="changeAmount" layoutX="437.0" layoutY="49.0" prefHeight="25.0" prefWidth="67.0" />
-      <Button onMouseClicked="#accept" layoutX="437.0" layoutY="85.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="116.0" text="Применить" />
-      <Button onMouseClicked="#delete" layoutX="437.0" layoutY="157.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="123.0" text="Удалить продукт" />
+      <Button layoutX="437.0" layoutY="85.0" mnemonicParsing="false" onMouseClicked="#accept" prefHeight="25.0" prefWidth="116.0" text="Применить" />
+      <Button layoutX="437.0" layoutY="121.0" mnemonicParsing="false" onMouseClicked="#delete" prefHeight="25.0" prefWidth="116.0" text="Удалить продукт" />
       <Button layoutX="469.0" layoutY="355.0" mnemonicParsing="false" onMousePressed="#back" prefHeight="31.0" prefWidth="99.0" text="Назад" />
       <Label layoutX="77.0" layoutY="355.0" prefHeight="31.0" prefWidth="116.0" text="Общая стоимость" />
       <Label fx:id="totalPriceLabel" layoutX="193.0" layoutY="358.0" prefHeight="25.0" prefWidth="85.0">
@@ -24,5 +24,6 @@
             <Font size="14.0" />
          </font>
       </Label>
+      <Button onMouseClicked="#AcceptOrder" layoutX="437.0" layoutY="188.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="124.0" text="Подтвердить заказ" />
    </children>
 </AnchorPane>
