--- a/src/Shop/View/GUI/RegistrationGUI.fxml
+++ b/src/Shop/View/GUI/RegistrationGUI.fxml
@@ -4,7 +4,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<AnchorPane prefHeight="400.0" prefWidth="350.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Shop.View.Controllers.RegistrationGUI">
+<AnchorPane prefHeight="400.0" prefWidth="350.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Shop.View.Controllers.RegistrationController">
    <TextField fx:id="login" layoutX="100.0" layoutY="80.0" promptText="Логин">
       <font>
          <Font size="14.0" />
