--- a/src/Shop/View/GUI/AdminGUI.fxml
+++ b/src/Shop/View/GUI/AdminGUI.fxml
@@ -1,14 +1,48 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="Shop.View.Controllers.AdminController"
-            prefHeight="400.0" prefWidth="600.0">
-
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Shop.View.Controllers.AdminController">
+   <children>
+      <TabPane layoutX="14.0" layoutY="14.0" prefHeight="334.0" prefWidth="572.0" tabClosingPolicy="UNAVAILABLE">
+        <tabs>
+          <Tab text="Пользователи">
+            <content>
+              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                     <children>
+                        <TableView fx:id="users" prefHeight="305.0" prefWidth="572.0">
+                          <columns>
+                            <TableColumn fx:id="userName" prefWidth="197.0" text="Имя" />
+                            <TableColumn fx:id="userLogin" prefWidth="155.0" text="Логин" />
+                              <TableColumn fx:id="userMail" prefWidth="160.0" text="Почта" />
+                              <TableColumn fx:id="userRole" prefWidth="59.0" text="Роль" />
+                          </columns>
+                        </TableView>
+                     </children>
+                  </AnchorPane>
+            </content>
+          </Tab>
+          <Tab text="Заказы">
+            <content>
+              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                     <children>
+                        <TableView fx:id="orders" prefHeight="306.0" prefWidth="572.0">
+                          <columns>
+                            <TableColumn fx:id="orderNumber" prefWidth="58.0" text="Номер" />
+                            <TableColumn fx:id="orderPrice" prefWidth="109.0" text="Общая стоимость" />
+                              <TableColumn fx:id="orderDate" prefWidth="79.0" text="Дата" />
+                              <TableColumn fx:id="orderStatus" text="Статус" />
+                              <TableColumn fx:id="orderCustomerName" prefWidth="116.0" text="Покупатель" />
+                              <TableColumn fx:id="orderCustomerMail" prefWidth="129.0" text="Почта" />
+                          </columns>
+                        </TableView>
+                     </children>
+                  </AnchorPane>
+            </content>
+          </Tab>
+        </tabs>
+      </TabPane>
+      <Button layoutX="449.0" layoutY="354.0" mnemonicParsing="false" onMouseClicked="#Back" prefHeight="32.0" prefWidth="87.0" text="Назад" />
+   </children>
 </AnchorPane>
