--- a/src/Shop/View/GUI/AdminGUI.fxml
+++ b/src/Shop/View/GUI/AdminGUI.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.chart.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
@@ -41,6 +42,22 @@
                   </AnchorPane>
             </content>
           </Tab>
+            <Tab text="Статистика">
+                <content>
+                    <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                        <children>
+                            <LineChart fx:id="lineChart" prefHeight="306.0" prefWidth="572.0" VBox.vgrow="ALWAYS">
+                                <xAxis>
+                                    <CategoryAxis autoRanging="false" side="BOTTOM" tickLabelGap="1.0" tickLength="1.0" fx:id="xAxis" />
+                                </xAxis>
+                                <yAxis>
+                                    <NumberAxis fx:id="yAxis" autoRanging="false" minorTickLength="1.0" side="LEFT" tickLabelGap="1.0" tickUnit="1.0" upperBound="10.0" />
+                                </yAxis>
+                            </LineChart>
+                        </children>
+                    </AnchorPane>
+                </content>
+            </Tab>
         </tabs>
       </TabPane>
       <Button layoutX="449.0" layoutY="354.0" mnemonicParsing="false" onMouseClicked="#Back" prefHeight="32.0" prefWidth="87.0" text="Назад" />
